--- a/analysis/clustering/clustering_Final_1/Component_Prep.ipynb
+++ b/analysis/clustering/clustering_Final_1/Component_Prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NEW"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final Table to use without ITD\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "rownames(df_initial) <- df_initial$data_pd\n",
+    "df_initial <- df_initial[,-1:-4]\n",
+    "list_no_events <- rownames(df_initial[!is.na(rowSums(df_initial[,c(1:83,123:169,171:475)])) &(rowSums(df_initial[,c(1:83,123:169,171:475)]))==0,])\n",
+    "# list_no_events\n",
+    "continuous_correlates <- c(\"age\",\"wbc\",\"hb\",\"plt\",\"bm_blasts\",\"os\")\n",
+    "\n",
+    "\n",
+    "df_final <- read.table(\"df_final_with_comp.tsv\")[,c(1:156)]\n",
+    "df_final <- df_final\n",
+    "factors <- c(\"ZRSR2\",\"U2AF1_p.S34\",\"U2AF1_p.Q157\",\"SRSF2\",\"SF3B1\",\"ASXL1\",\"STAG2\",\"BCOR\",\"RUNX1\",\"EZH2\",\"MLL\",\"PHF6\",\"SF1\",\"NF1\",\"CUX1\",\"SETBP1\")\n",
+    "correlates <- c(\"ahd\",\"perf_status\",\"bm_blasts\",\"secondary\",\"wbc\",\"hb\",\"plt\",\"gender\",\"age\",\"os\",\"os_status\")\n",
+    "df_final$full_component_t_15_17 <- ifelse((df_final$t_15_17==1),1,0) \n",
+    "df_final$full_component_inv_16 <- ifelse((df_final$inv_16==1),1,0) \n",
+    "df_final$full_component_t_8_21 <- ifelse((df_final$t_8_21==1),1,0) \n",
+    "df_final$full_component_t_11 <- ifelse((df_final$t_v_11==1 | df_final$t_9_11==1),1,0)   \n",
+    "df_final$full_component_t_6_9 <- ifelse((df_final$t_6_9==1),1,0) \n",
+    "df_final$full_component_inv_3 <- ifelse((df_final$inv_3==1),1,0)\n",
+    "df_final$full_component_additions <- ifelse((df_final$add_8==1 | df_final$add_11==1 | df_final$add_13==1 | df_final$add_21==1 | df_final$add_22==1),1,0)\n",
+    "df_final$full_component_TP53_complex <- ifelse((df_final$TP53==1 | df_final$complex==1) ,1,0)\n",
+    "df_final$full_component_NPM1 <- ifelse((df_final$NPM1==1),1,0) \n",
+    "df_final$full_component_CEBPA_bi <- ifelse((df_final$CEBPA_bi==1),1,0) \n",
+    "df_final$full_component_DNMT3A_IDH1_2 <- ifelse((df_final$DNMT3A==1 & (df_final$IDH1==1 | df_final$IDH2_p.R140==1 | df_final$IDH2_p.R172==1)),1,0)\n",
+    "df_final$full_component_WT1 <- ifelse((df_final$WT1==1),1,0) \n",
+    "df_final$full_component_chr_splicing_multiple <- ifelse((rowSums(df_final[,factors])>1) ,1,0)\n",
+    "df_final$full_component_chr_splicing_1 <- ifelse((rowSums(df_final[,factors])==1),1,0)\n",
+    "df_final$full_component_no_events <- ifelse(rownames(df_final) %in% list_no_events,1,0)\n",
+    "df_final$full_component_not_assigned <- ifelse(rowSums(df_final[,colnames(df_final)[startsWith(colnames(df_final),\"full_component_\")]])==0,1,0)\n",
+    "\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "rownames(df_initial) <- df_initial$data_pd\n",
+    "df_initial <- df_initial[,-1:-4]\n",
+    "df_eln <- read.table(\"../../../data/updated_dataset/eln_final_post_meeting.tsv\",sep = '\\t' , header = T)\n",
+    "rownames(df_eln) <- df_eln$X\n",
+    "df_eln <- df_eln[-1]\n",
+    "df <- merge(df_eln,df_final,by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "df <- merge(df,df_initial[,correlates],by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "for (col in colnames(df)[colSums(is.na(df)) > 0]){\n",
+    "    if(!is.element(col,c(\"os\",\"os_status\"))){        \n",
+    "        if(is.element(col,continuous_correlates)){\n",
+    "            df[,col][is.na(df[,col])] <- mean(df[,col], na.rm=TRUE)\n",
+    "        }else{\n",
+    "            df[,col][is.na(df[,col])] <- median(df[,col], na.rm=TRUE)\n",
+    "            }\n",
+    "    }\n",
+    "   \n",
+    "}\n",
+    "df <- na.omit(df)\n",
+    "df <- df[df$os>0,]\n",
+    "\n",
+    "# Handling additions\n",
+    "df[df$full_component_additions==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 | df$full_component_DNMT3A_IDH1_2==1 | df$full_component_WT1==1 ),\"full_component_additions\"] <- 0\n",
+    "\n",
+    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & !(df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 |df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1 | df$minusy==1),\"full_component_additions\"] <- 0   ### overlap with no deletions are 0\n",
+    "\n",
+    "# Handling DNMT3A IDH\n",
+    "df[df$full_component_DNMT3A_IDH1_2==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 | df$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2\"] <- 0\n",
+    "\n",
+    "# Handling WT1\n",
+    "df[df$full_component_WT1==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 ),\"full_component_WT1\"] <- 0\n",
+    "\n",
+    "# Handling chr_splicing_1\n",
+    "df[df$full_component_chr_splicing_1==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 | df$full_component_CEBPA_bi==1 ),\"full_component_chr_splicing_1\"] <- 0\n",
+    "\n",
+    "df$overlap <- 0\n",
+    "df[rowSums(df[,colnames(df[,startsWith(colnames(df),\n",
+    "                                       \"full_component_\"),])])>1,\"overlap\"] <- 1\n",
+    "df <- df[,c(1:158,177:185,159:176,188,186:187)]\n",
+    "df$eln_2017 <- ifelse(df$eln_2017==\"adverse\",1,\n",
+    "                    ifelse(df$eln_2017==\"intermediate\",2,3))\n",
+    "df <- df[,c(1:183,185,184,186,187,188)]\n",
+    "write.table(df,\"df_final_full_component.tsv\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With ITD\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "rownames(df_initial) <- df_initial$data_pd\n",
+    "df_initial <- df_initial[,-1:-4]\n",
+    "list_no_events <- rownames(df_initial[!is.na(rowSums(df_initial[,c(1:83,123:169,171:475)])) &(rowSums(df_initial[,c(1:83,123:169,171:475)]))==0,])\n",
+    "# list_no_events\n",
+    "continuous_correlates <- c(\"age\",\"wbc\",\"hb\",\"plt\",\"bm_blasts\",\"os\")\n",
+    "\n",
+    "\n",
+    "df_final <- read.table(\"df_final_with_comp.tsv\")[,c(1:156)]\n",
+    "df_final <- df_final\n",
+    "factors <- c(\"ZRSR2\",\"U2AF1_p.S34\",\"U2AF1_p.Q157\",\"SRSF2\",\"SF3B1\",\"ASXL1\",\"STAG2\",\"BCOR\",\"RUNX1\",\"EZH2\",\"MLL\",\"PHF6\",\"SF1\",\"NF1\",\"CUX1\",\"SETBP1\")\n",
+    "correlates <- c(\"ahd\",\"perf_status\",\"bm_blasts\",\"secondary\",\"wbc\",\"hb\",\"plt\",\"gender\",\"age\",\"os\",\"os_status\")\n",
+    "df_final$full_component_t_15_17 <- ifelse((df_final$t_15_17==1),1,0)\n",
+    "\n",
+    "df_final$full_component_inv_16 <- ifelse((df_final$inv_16==1),1,0) \n",
+    "\n",
+    "df_final$full_component_t_8_21 <- ifelse((df_final$t_8_21==1 & df_final$ITD==0),1,0)\n",
+    "df_final$full_component_t_8_21_ITD <- ifelse((df_final$t_8_21==1 & df_final$ITD==1),1,0) \n",
+    "\n",
+    "df_final$full_component_t_11 <- ifelse((df_final$t_v_11==1 | df_final$t_9_11==1),1,0)   \n",
+    "\n",
+    "df_final$full_component_t_6_9 <- ifelse((df_final$t_6_9==1 & df_final$ITD==0),1,0)\n",
+    "df_final$full_component_t_6_9_ITD <- ifelse((df_final$t_6_9==1 & df_final$ITD==1),1,0)\n",
+    "\n",
+    "df_final$full_component_inv_3 <- ifelse((df_final$inv_3==1),1,0)\n",
+    "\n",
+    "df_final$full_component_additions <- ifelse((df_final$add_8==1 | df_final$add_11==1 | df_final$add_13==1 | df_final$add_21==1 | df_final$add_22==1),1,0)\n",
+    "\n",
+    "df_final$full_component_TP53_complex <- ifelse((df_final$TP53==1 | df_final$complex==1) ,1,0)\n",
+    "\n",
+    "df_final$full_component_NPM1 <- ifelse((df_final$NPM1==1 & df_final$ITD==0),1,0) \n",
+    "df_final$full_component_NPM1_ITD <- ifelse((df_final$NPM1==1 & df_final$ITD==1),1,0)\n",
+    "\n",
+    "df_final$full_component_CEBPA_bi <- ifelse((df_final$CEBPA_bi==1 & df_final$ITD==0),1,0) \n",
+    "df_final$full_component_CEBPA_bi_ITD <- ifelse((df_final$CEBPA_bi==1 & df_final$ITD==1),1,0)\n",
+    "\n",
+    "df_final$full_component_DNMT3A_IDH1_2 <- ifelse((df_final$DNMT3A==1 & (df_final$IDH1==1 | df_final$IDH2_p.R140==1 | df_final$IDH2_p.R172==1) & df_final$ITD==0),1,0)\n",
+    "df_final$full_component_DNMT3A_IDH1_2_ITD <- ifelse((df_final$DNMT3A==1 & (df_final$IDH1==1 | df_final$IDH2_p.R140==1 | df_final$IDH2_p.R172==1) & df_final$ITD==1),1,0)\n",
+    "\n",
+    "df_final$full_component_WT1 <- ifelse((df_final$WT1==1 & df_final$ITD==0),1,0) \n",
+    "df_final$full_component_WT1_ITD <- ifelse((df_final$WT1==1 & df_final$ITD==1),1,0)\n",
+    "\n",
+    "df_final$full_component_chr_splicing_multiple <- ifelse((rowSums(df_final[,factors])>1) ,1,0)\n",
+    "\n",
+    "df_final$full_component_chr_splicing_1 <- ifelse((rowSums(df_final[,factors])==1),1,0)\n",
+    "\n",
+    "df_final$full_component_no_events <- ifelse(rownames(df_final) %in% list_no_events,1,0)\n",
+    "\n",
+    "df_final$full_component_not_assigned <- ifelse(rowSums(df_final[,colnames(df_final)[startsWith(colnames(df_final),\"full_component_\")]])==0 & df_final$ITD==0,1,0)\n",
+    "df_final$full_component_not_assigned_ITD <- ifelse(rowSums(df_final[,colnames(df_final)[startsWith(colnames(df_final),\"full_component_\")]])==0 & df_final$ITD==1,1,0)\n",
+    "\n",
+    "\n",
+    "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
+    "rownames(df_initial) <- df_initial$data_pd\n",
+    "df_initial <- df_initial[,-1:-4]\n",
+    "df_eln <- read.table(\"../../../data/updated_dataset/eln_final_post_meeting.tsv\",sep = '\\t' , header = T)\n",
+    "rownames(df_eln) <- df_eln$X\n",
+    "df_eln <- df_eln[-1]\n",
+    "df <- merge(df_eln,df_final,by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "df <- merge(df,df_initial[,correlates],by=0)\n",
+    "rownames(df) <- df$Row.names\n",
+    "df <- df[-1]\n",
+    "for (col in colnames(df)[colSums(is.na(df)) > 0]){\n",
+    "    if(!is.element(col,c(\"os\",\"os_status\"))){        \n",
+    "        if(is.element(col,continuous_correlates)){\n",
+    "            df[,col][is.na(df[,col])] <- mean(df[,col], na.rm=TRUE)\n",
+    "        }else{\n",
+    "            df[,col][is.na(df[,col])] <- median(df[,col], na.rm=TRUE)\n",
+    "            }\n",
+    "    }\n",
+    "   \n",
+    "}\n",
+    "df <- na.omit(df)\n",
+    "df <- df[df$os>0,]\n",
+    "\n",
+    "# Handling additions   (for overlap with tp53 we want at least one deletion)\n",
+    "df[df$full_component_additions==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 |df$full_component_t_8_21_ITD==1 |\n",
+    "                                     df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 |\n",
+    "                                     df$full_component_NPM1==1 |df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 |\n",
+    "                                     df$full_component_DNMT3A_IDH1_2==1 | df$full_component_DNMT3A_IDH1_2_ITD==1 | df$full_component_WT1==1 | df$full_component_WT1_ITD==1),\"full_component_additions\"] <- 0\n",
+    "\n",
+    "df[df$full_component_additions==1 & (df$full_component_TP53_complex==1) & !(df$del_7==1 | df$del_17==1 | df$del_5==1 | df$del_9==1 |df$del_13==1 |\n",
+    "                                                                           df$del_20==1 | df$del_18==1 | df$del_16==1 | df$del_12==1 | df$del_3==1 | df$minusy==1),\"full_component_additions\"] <- 0   ### overlap with no deletions are 0\n",
+    "\n",
+    "# Handling DNMT3A IDH\n",
+    "df[df$full_component_DNMT3A_IDH1_2==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 | df$full_component_t_11==1 |\n",
+    "                                         df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 |\n",
+    "                                         df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 | df$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2\"] <- 0\n",
+    "\n",
+    "df[df$full_component_DNMT3A_IDH1_2_ITD==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 | df$full_component_t_11==1 |\n",
+    "                                         df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 |\n",
+    "                                         df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 | df$full_component_additions==1 ),\"full_component_DNMT3A_IDH1_2_ITD\"] <- 0\n",
+    "\n",
+    "# Handling WT1\n",
+    "df[df$full_component_WT1==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 | df$full_component_t_11==1 |\n",
+    "                               df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 |\n",
+    "                               df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 ),\"full_component_WT1\"] <- 0\n",
+    "\n",
+    "df[df$full_component_WT1_ITD==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 | df$full_component_t_11==1 |\n",
+    "                               df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 | df$full_component_TP53_complex==1 | df$full_component_NPM1==1 |\n",
+    "                               df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 ),\"full_component_WT1_ITD\"] <- 0\n",
+    "\n",
+    "\n",
+    "# Handling chr_splicing_1\n",
+    "df[df$full_component_chr_splicing_1==1 & (df$full_component_t_15_17==1 | df$full_component_inv_16==1 | df$full_component_t_8_21==1 | df$full_component_t_8_21_ITD==1 |\n",
+    "                                          df$full_component_t_11==1 | df$full_component_t_6_9==1 | df$full_component_t_6_9_ITD==1 | df$full_component_inv_3==1 |\n",
+    "                                          df$full_component_TP53_complex==1 | df$full_component_NPM1==1 | df$full_component_NPM1_ITD==1 | df$full_component_CEBPA_bi==1 | df$full_component_CEBPA_bi_ITD==1 ),\"full_component_chr_splicing_1\"] <- 0\n",
+    "\n",
+    "df$overlap <- 0\n",
+    "df[rowSums(df[,colnames(df[,startsWith(colnames(df),\"full_component_\"),])])>1,\"overlap\"] <- 1\n",
+    "df <- df[,c(1:158,184:192,159:183,195,193:194)]\n",
+    "df$eln_2017 <- ifelse(df$eln_2017==\"adverse\",1,\n",
+    "                    ifelse(df$eln_2017==\"intermediate\",2,3))\n",
+    "df <- df[,c(1:189,191,192,190,193:195)]\n",
+    "write.table(df,\"df_final_full_component_ITD.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OLD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +348,6 @@
     "\n",
     "df$overlap <- 0\n",
     "df[rowSums(df[,colnames(df[,startsWith(colnames(df),\n",
-    "                                       \n",
     "                                       \"full_component_\"),])])>1,\"overlap\"] <- 1\n",
     "df <- df[,c(1:158,177:185,159:176,188,186:187)]\n",
     "df$eln_2017 <- ifelse(df$eln_2017==\"adverse\",1,\n",
@@ -132,28 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "   0    1 \n",
-       "1900  225 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "table(df$full_component_n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +413,7 @@
     "df_initial <- read.table(\"../../../data/initial_dataset/Master_04_10_2019.csv\",sep = ',' , header = T)\n",
     "rownames(df_initial) <- df_initial$data_pd\n",
     "df_initial <- df_initial[,-1:-4]\n",
-    "df_eln <- read.table(\"../../../data/updated_dataset/eln_final.tsv\",sep = '\\t' , header = T)\n",
+    "df_eln <- read.table(\"../../../data/updated_dataset/eln_final_post_meeting.tsv\",sep = '\\t' , header = T)\n",
     "rownames(df_eln) <- df_eln$X\n",
     "df_eln <- df_eln[-1]\n",
     "df <- merge(df_eln,tmp,by=0)\n",
@@ -269,7 +473,7 @@
     "df <- df[,c(1:158,184:192,159:183,195,193:194)]\n",
     "df$eln_2017 <- ifelse(df$eln_2017==\"adverse\",1,\n",
     "                    ifelse(df$eln_2017==\"intermediate\",2,3))\n",
-    "write.table(df,\"df_final_full_component_ITD.tsv\")"
+    "# write.table(df,\"df_final_full_component_ITD.tsv\")"
    ]
   },
   {
