--- a/analysis/clustering/initial_clustering/ITD.ipynb
+++ b/analysis/clustering/initial_clustering/ITD.ipynb
@@ -1706,10 +1706,10 @@
    "source": [
     "What we can deduce from distribution plots is that it is clear that when the number of reads are high we are more confident for ITD. \n",
     "Proof : we look at the distribution when both NGS and Clin are 1 which means we have a double check and therefore we are more confident because we have validated either the clinical with the NGS or the NGS with the Clinical.\n",
-    "Conclusion: we create a cutoff based on 0.7 (to be discussed) standard deviation on the left of the distribution for (NGS_ITD=1 & Clin_ITD=1) which is : \n",
-    "(136.8 -0.7*83)=78.7\n",
+    "Conclusion: we create a cutoff based on 0.75 (to be discussed) standard deviation on the left of the distribution for (NGS_ITD=1 & Clin_ITD=1) which is : \n",
+    "(136.8 -0.75*83)=74.55\n",
     "\n",
-    "if NGS Read_count >79:\n",
+    "if NGS Read_count >74.55:\n",
     "    1\n",
     "else:\n",
     "    0"
@@ -1727,24 +1727,13 @@
    "metadata": {},
    "source": [
     "When we do not have the clinical results , we will rely on the NGS results combined with the read counts similarly to the case above.\n",
-    "The difference with the case above is that we do not have a contradiction between the two methods. So, the idea is to 'trust' more the NGS and relax the read counts cutoff in comparison with the previous case. \n",
-    "However, we will still look at the number of reads which seems the main indicator correlated with the confidence for ITD.\n",
-    "Conclusion: set up a cutoff at 1 standard deviation on the left (instead of 0.7). This will means that we will conclude ITD more often based on the read counts compared to the case above. \n",
+    "Conclusion: set up a cutoff at 0.75 standard deviation on the left \n",
     "(136.8 -83)=53.8\n",
     "\n",
-    "if NGS Read_count > 53:\n",
+    "if NGS Read_count > 74.55:\n",
     "    1\n",
     "else:\n",
-    "    0   \n",
-    "Please note that here we give more confidence to NGS because of the absence of clinical results and therefore the absence of conflicts so we can relax more on the left side of the distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Let's take a cutoff for both :\n",
-    "(169/215) * 0.7 + (46/215) * 1 =0.76 "
+    "    0   \n"
    ]
   },
   {
