--- a/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
       "text/plain": [
        "\n",
        "     NEW_adverse    NEW_favorable NEW_intermediate \n",
-       "             350              388              438 "
+       "             356              372              448 "
       ]
      },
      "metadata": {},
@@ -53,7 +53,7 @@
     "\n",
     "# Handle  CR stat and Relapse stat\n",
     "\n",
-    "# For CR stat , we say that when CR is Na the status is 0 . That makes sense because for all other cases CR date is different \n",
+    "# For CR stat , we say that when CR is Na the status is 0 . That makes sense because for all other cases CR date is different from OSpw \n",
     "\n",
     "df_nejm$CR_stat <- ifelse(is.na(df_nejm$CR),0,1)\n",
     "df_nejm[is.na(df_nejm$CR),\"Relapse_stat\"] <- 0  ## for relapse we keep relapse stat when available and we put 0 when patients did not experienced CR (because you need CR before Relapse)\n",
@@ -84,21 +84,19 @@
     "\n",
     "df_nejm$molecular_classification <- \"none\"\n",
     "\n",
-    "df_nejm[(df_nejm$full_component_NPM1==1  | df_nejm$full_component_no_events==1 |df_nejm$full_component_inv_16==1 | df_nejm$full_component_t_8_21==1 |\n",
-    "     df_nejm$full_component_t_15_17==1 | (df_nejm$full_component_additions==1 & df_nejm$overlap==0)) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "df_nejm[(df_nejm$full_component_NPM1==1 |df_nejm$full_component_inv_16==1 | df_nejm$full_component_t_8_21==1 | df_nejm$full_component_t_15_17==1 ) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
     "\n",
-    "df_nejm[(df_nejm$full_component_chr_splicing_1==1 | df_nejm$full_component_not_assigned==1) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
+    "df_nejm[(df_nejm$full_component_chr_splicing_1==1 | df_nejm$full_component_t_6_9==1) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
     "          \n",
-    "df_nejm[(df_nejm$full_component_additions==1 | df_nejm$full_component_TP53_complex==1 | df_nejm$full_component_chr_splicing_multiple==1  | df_nejm$full_component_inv_3==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_adverse\"      \n",
+    "df_nejm[((df_nejm$full_component_additions==1 & df_nejm$overlap==1) | df_nejm$full_component_chr_splicing_multiple==1 | \n",
+    "          df_nejm$full_component_TP53_complex==1   | df_nejm$full_component_inv_3==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_adverse\"  \n",
     "          \n",
-    "df_nejm[(df_nejm$CEBPA_bi==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "df_nejm[((df_nejm$full_component_additions==1 & df_nejm$overlap==0) | df_nejm$full_component_t_11==1 | df_nejm$full_component_WT1==1 | df_nejm$full_component_DNMT3A_IDH1_2==1 |\n",
+    "          df_nejm$full_component_not_assigned==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_intermediate\"\n",
     "          \n",
-    "df_nejm[(df_nejm$full_component_t_11==1 | df_nejm$full_component_t_6_9==1 | df_nejm$full_component_WT1==1 | df_nejm$full_component_DNMT3A_IDH1_2==1 ) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
-    "     \n",
+    "df_nejm[(df_nejm$full_component_CEBPA_bi==1 | df_nejm$full_component_no_events==1) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_favorable\"\n",
     "\n",
     "#order is important! adverse . then intermediate otherwise we . overlap\n",
-    "\n",
-    "\n",
     "df_nejm[df_nejm$molecular_classification==\"NEW_intermediate\" & df_nejm$ITD==1,\"molecular_classification\"] <- \"NEW_adverse\"\n",
     "\n",
     "df_nejm[df_nejm$molecular_classification==\"NEW_favorable\" & df_nejm$ITD==1,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +136,7 @@
       "text/plain": [
        "\n",
        "     NEW_adverse    NEW_favorable NEW_intermediate \n",
-       "             747              719              659 "
+       "             752              689              684 "
       ]
      },
      "metadata": {},
@@ -173,21 +171,19 @@
     "\n",
     "df_cardiff$molecular_classification <- \"none\"\n",
     "\n",
-    "df_cardiff[(df_cardiff$full_component_NPM1==1  | df_cardiff$full_component_no_events==1 |df_cardiff$full_component_inv_16==1 | df_cardiff$full_component_t_8_21==1 |\n",
-    "     df_cardiff$full_component_t_15_17==1 | (df_cardiff$full_component_additions==1 & df_cardiff$overlap==0)) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "df_cardiff[(df_cardiff$full_component_NPM1==1 |df_cardiff$full_component_inv_16==1 | df_cardiff$full_component_t_8_21==1 | df_cardiff$full_component_t_15_17==1 ) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
     "\n",
-    "df_cardiff[(df_cardiff$full_component_chr_splicing_1==1 | df_cardiff$full_component_not_assigned==1) & df_cardiff$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
+    "df_cardiff[(df_cardiff$full_component_chr_splicing_1==1 | df_cardiff$full_component_t_6_9==1) & df_cardiff$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
     "          \n",
-    "df_cardiff[(df_cardiff$full_component_additions==1 | df_cardiff$full_component_TP53_complex==1 | df_cardiff$full_component_chr_splicing_multiple==1  | df_cardiff$full_component_inv_3==1) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_adverse\"      \n",
+    "df_cardiff[((df_cardiff$full_component_additions==1 & df_cardiff$overlap==1) | df_cardiff$full_component_chr_splicing_multiple==1 | \n",
+    "          df_cardiff$full_component_TP53_complex==1   | df_cardiff$full_component_inv_3==1) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_adverse\"  \n",
     "          \n",
-    "df_cardiff[(df_cardiff$CEBPA_bi==1) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "df_cardiff[((df_cardiff$full_component_additions==1 & df_cardiff$overlap==0) | df_cardiff$full_component_t_11==1 | df_cardiff$full_component_WT1==1 | df_cardiff$full_component_DNMT3A_IDH1_2==1 |\n",
+    "          df_cardiff$full_component_not_assigned==1) & df_cardiff$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_intermediate\"\n",
     "          \n",
-    "df_cardiff[(df_cardiff$full_component_t_11==1 | df_cardiff$full_component_t_6_9==1 | df_cardiff$full_component_WT1==1 | df_cardiff$full_component_DNMT3A_IDH1_2==1 ) & df_cardiff$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
-    "     \n",
+    "df_cardiff[(df_cardiff$full_component_CEBPA_bi==1 | df_cardiff$full_component_no_events==1) & df_cardiff$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_favorable\"\n",
     "\n",
     "#order is important! adverse . then intermediate otherwise we . overlap\n",
-    "\n",
-    "\n",
     "df_cardiff[df_cardiff$molecular_classification==\"NEW_intermediate\" & df_cardiff$ITD==1,\"molecular_classification\"] <- \"NEW_adverse\"\n",
     "\n",
     "df_cardiff[df_cardiff$molecular_classification==\"NEW_favorable\" & df_cardiff$ITD==1,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
@@ -196,6 +192,7 @@
     "df_cardiff$NEW_intermediate <-  ifelse(df_cardiff$molecular_classification==\"NEW_intermediate\",1,0)\n",
     "df_cardiff$NEW_adverse <-  ifelse(df_cardiff$molecular_classification==\"NEW_adverse\",1,0)\n",
     "table(df_cardiff$molecular_classification)\n",
+    "\n",
     "\n",
     "\n",
     "# Remove NA values from Relapse Status (2125 to 2044 patients)\n",
@@ -247,19 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "write.table(df_cardiff,\"df_cardiff_personnalization.tsv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
