--- a/analysis/prognosis/Prognosis_locked/Untitled.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Untitled.ipynb
@@ -2,129 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>id</th><th scope=col>rec</th><th scope=col>rec.s</th><th scope=col>ae</th><th scope=col>ae.s</th><th scope=col>recae</th><th scope=col>recae.s</th><th scope=col>rel</th><th scope=col>rel.s</th><th scope=col>srv</th><th scope=col>srv.s</th><th scope=col>year</th><th scope=col>agecl</th><th scope=col>proph</th><th scope=col>match</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1                 </td><td>  22              </td><td>1                 </td><td> 995              </td><td>0                 </td><td> 995              </td><td>0                 </td><td> 995              </td><td>0                 </td><td> 995              </td><td>0                 </td><td>1995-1998         </td><td>20-40             </td><td>no                </td><td>no gender mismatch</td></tr>\n",
-       "\t<tr><td>2                 </td><td>  29              </td><td>1                 </td><td>  12              </td><td>1                 </td><td>  29              </td><td>1                 </td><td> 422              </td><td>1                 </td><td> 579              </td><td>1                 </td><td>1995-1998         </td><td>20-40             </td><td>no                </td><td>no gender mismatch</td></tr>\n",
-       "\t<tr><td>3                 </td><td>1264              </td><td>0                 </td><td>  27              </td><td>1                 </td><td>1264              </td><td>0                 </td><td>1264              </td><td>0                 </td><td>1264              </td><td>0                 </td><td>1995-1998         </td><td>20-40             </td><td>no                </td><td>no gender mismatch</td></tr>\n",
-       "\t<tr><td>4                 </td><td>  50              </td><td>1                 </td><td>  42              </td><td>1                 </td><td>  50              </td><td>1                 </td><td>  84              </td><td>1                 </td><td> 117              </td><td>1                 </td><td>1995-1998         </td><td>20-40             </td><td>no                </td><td>gender mismatch   </td></tr>\n",
-       "\t<tr><td>5                                                         </td><td><span style=white-space:pre-wrap>  22</span>              </td><td>1                                                         </td><td>1133                                                      </td><td>0                                                         </td><td>1133                                                      </td><td>0                                                         </td><td> 114                                                      </td><td>1                                                         </td><td>1133                                                      </td><td>0                                                         </td><td>1995-1998                                                 </td><td><span style=white-space:pre-wrap>&gt;40  </span>          </td><td>no                                                        </td><td><span style=white-space:pre-wrap>gender mismatch   </span></td></tr>\n",
-       "\t<tr><td>6                 </td><td>  33              </td><td>1                 </td><td>  27              </td><td>1                 </td><td>  33              </td><td>1                 </td><td>1427              </td><td>0                 </td><td>1427              </td><td>0                 </td><td>1995-1998         </td><td>20-40             </td><td>no                </td><td>no gender mismatch</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lllllllllllllll}\n",
-       " id & rec & rec.s & ae & ae.s & recae & recae.s & rel & rel.s & srv & srv.s & year & agecl & proph & match\\\\\n",
-       "\\hline\n",
-       "\t 1                  &   22               & 1                  &  995               & 0                  &  995               & 0                  &  995               & 0                  &  995               & 0                  & 1995-1998          & 20-40              & no                 & no gender mismatch\\\\\n",
-       "\t 2                  &   29               & 1                  &   12               & 1                  &   29               & 1                  &  422               & 1                  &  579               & 1                  & 1995-1998          & 20-40              & no                 & no gender mismatch\\\\\n",
-       "\t 3                  & 1264               & 0                  &   27               & 1                  & 1264               & 0                  & 1264               & 0                  & 1264               & 0                  & 1995-1998          & 20-40              & no                 & no gender mismatch\\\\\n",
-       "\t 4                  &   50               & 1                  &   42               & 1                  &   50               & 1                  &   84               & 1                  &  117               & 1                  & 1995-1998          & 20-40              & no                 & gender mismatch   \\\\\n",
-       "\t 5                  &   22               & 1                  & 1133               & 0                  & 1133               & 0                  &  114               & 1                  & 1133               & 0                  & 1995-1998          & >40                & no                 & gender mismatch   \\\\\n",
-       "\t 6                  &   33               & 1                  &   27               & 1                  &   33               & 1                  & 1427               & 0                  & 1427               & 0                  & 1995-1998          & 20-40              & no                 & no gender mismatch\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| id | rec | rec.s | ae | ae.s | recae | recae.s | rel | rel.s | srv | srv.s | year | agecl | proph | match |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1                  |   22               | 1                  |  995               | 0                  |  995               | 0                  |  995               | 0                  |  995               | 0                  | 1995-1998          | 20-40              | no                 | no gender mismatch |\n",
-       "| 2                  |   29               | 1                  |   12               | 1                  |   29               | 1                  |  422               | 1                  |  579               | 1                  | 1995-1998          | 20-40              | no                 | no gender mismatch |\n",
-       "| 3                  | 1264               | 0                  |   27               | 1                  | 1264               | 0                  | 1264               | 0                  | 1264               | 0                  | 1995-1998          | 20-40              | no                 | no gender mismatch |\n",
-       "| 4                  |   50               | 1                  |   42               | 1                  |   50               | 1                  |   84               | 1                  |  117               | 1                  | 1995-1998          | 20-40              | no                 | gender mismatch    |\n",
-       "| 5                  |   22               | 1                  | 1133               | 0                  | 1133               | 0                  |  114               | 1                  | 1133               | 0                  | 1995-1998          | >40                | no                 | gender mismatch    |\n",
-       "| 6                  |   33               | 1                  |   27               | 1                  |   33               | 1                  | 1427               | 0                  | 1427               | 0                  | 1995-1998          | 20-40              | no                 | no gender mismatch |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  id rec  rec.s ae   ae.s recae recae.s rel  rel.s srv  srv.s year      agecl\n",
-       "1 1    22 1      995 0     995  0        995 0      995 0     1995-1998 20-40\n",
-       "2 2    29 1       12 1      29  1        422 1      579 1     1995-1998 20-40\n",
-       "3 3  1264 0       27 1    1264  0       1264 0     1264 0     1995-1998 20-40\n",
-       "4 4    50 1       42 1      50  1         84 1      117 1     1995-1998 20-40\n",
-       "5 5    22 1     1133 0    1133  0        114 1     1133 0     1995-1998 >40  \n",
-       "6 6    33 1       27 1      33  1       1427 0     1427 0     1995-1998 20-40\n",
-       "  proph match             \n",
-       "1 no    no gender mismatch\n",
-       "2 no    no gender mismatch\n",
-       "3 no    no gender mismatch\n",
-       "4 no    gender mismatch   \n",
-       "5 no    gender mismatch   \n",
-       "6 no    no gender mismatch"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "library(\"mstate\")\n",
-    "data(\"ebmt4\")\n",
-    "ebmt <- ebmt4\n",
-    "head(ebmt)\n"
+    "a <- read.table(\"outcomes_qc_05_21.csv\",sep=\",\",header=T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>Tx</th><th scope=col>Rec</th><th scope=col>AE</th><th scope=col>Rec+AE</th><th scope=col>Rel</th><th scope=col>Death</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>Tx</th><td>NA</td><td> 1</td><td> 2</td><td>NA</td><td> 3</td><td> 4</td></tr>\n",
-       "\t<tr><th scope=row>Rec</th><td>NA</td><td>NA</td><td>NA</td><td> 5</td><td> 6</td><td> 7</td></tr>\n",
-       "\t<tr><th scope=row>AE</th><td>NA</td><td>NA</td><td>NA</td><td> 8</td><td> 9</td><td>10</td></tr>\n",
-       "\t<tr><th scope=row>Rec+AE</th><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>11</td><td>12</td></tr>\n",
-       "\t<tr><th scope=row>Rel</th><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>Death</th><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td><td>NA</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|llllll}\n",
-       "  & Tx & Rec & AE & Rec+AE & Rel & Death\\\\\n",
-       "\\hline\n",
-       "\tTx & NA &  1 &  2 & NA &  3 &  4\\\\\n",
-       "\tRec & NA & NA & NA &  5 &  6 &  7\\\\\n",
-       "\tAE & NA & NA & NA &  8 &  9 & 10\\\\\n",
-       "\tRec+AE & NA & NA & NA & NA & 11 & 12\\\\\n",
-       "\tRel & NA & NA & NA & NA & NA & NA\\\\\n",
-       "\tDeath & NA & NA & NA & NA & NA & NA\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| <!--/--> | Tx | Rec | AE | Rec+AE | Rel | Death |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| Tx | NA |  1 |  2 | NA |  3 |  4 |\n",
-       "| Rec | NA | NA | NA |  5 |  6 |  7 |\n",
-       "| AE | NA | NA | NA |  8 |  9 | 10 |\n",
-       "| Rec+AE | NA | NA | NA | NA | 11 | 12 |\n",
-       "| Rel | NA | NA | NA | NA | NA | NA |\n",
-       "| Death | NA | NA | NA | NA | NA | NA |\n",
-       "\n"
-      ],
       "text/plain": [
-       "        to\n",
-       "from     Tx Rec AE Rec+AE Rel Death\n",
-       "  Tx     NA  1   2 NA      3   4   \n",
-       "  Rec    NA NA  NA  5      6   7   \n",
-       "  AE     NA NA  NA  8      9  10   \n",
-       "  Rec+AE NA NA  NA NA     11  12   \n",
-       "  Rel    NA NA  NA NA     NA  NA   \n",
-       "  Death  NA NA  NA NA     NA  NA   "
+       "\n",
+       "              14               15               88               99 \n",
+       "               5                4               35               24 \n",
+       " ALLO (post rel)    ALLO (pre CR)       ALLOGENEIC    AUTO (2nd CR) \n",
+       "              31               63               62               99 \n",
+       "AUTO (post rel2)    AUTO (pre CR)   AUTO (relapse)       AUTOLOGOUS \n",
+       "              85               10                4                1 \n",
+       "      MISMATCHED              MUD             NONE            OTHER \n",
+       "              20              169             1730               19 \n",
+       "               S        SYNGENEIC          UNKNOWN \n",
+       "               2                1               67 "
       ]
      },
      "metadata": {},
@@ -132,8 +35,7 @@
     }
    ],
    "source": [
-    "tmat <- transMat(x = list(c(2, 3, 5, 6), c(4, 5, 6), c(4, 5, 6), c(5, 6),c(), c()), names = c(\"Tx\", \"Rec\", \"AE\", \"Rec+AE\", \"Rel\", \"Death\"))\n",
-    "tmat"
+    "table(a$pbmty)"
    ]
   },
   {
