--- a/analysis/prognosis/Prognosis_locked/MRD_Analysis/analysis.ipynb
+++ b/analysis/prognosis/Prognosis_locked/MRD_Analysis/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "CR no MRD data        CR,MRD-        CR,MRD+           MRD-           MRD+ \n",
+       "           352            182            113              0              0 \n",
+       "    No CR data    No MRD data      Not in CR \n",
+       "            39              0             14 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tmp <-read.table('../handovercompiled.Yanis.080919.csv',sep=\",\",header=T)\n",
+    "rownames(tmp) <- tmp$data_pd\n",
+    "cols_to_keep <- colnames(tmp)\n",
+    "master <- read.table('../../../../data/initial_dataset/Master_04_10_2019.csv',sep=\",\",header=T)\n",
+    "rownames(master) <- master$data_pd\n",
+    "df <- read.table('../../../clustering/clustering_Final_1/df_final_full_component.tsv')\n",
+    "df_merge <- merge(df,master[,cols_to_keep],by=0)\n",
+    "rownames(df_merge) <- df_merge$Row.names\n",
+    "df_merge <- df_merge[-1]\n",
+    "df_merge$AMLID <- as.character(df_merge$AMLID)\n",
+    "df_merge$MRD1 <- as.character(df_merge$MRD1)\n",
+    "\n",
+    "df_merge <- df_merge[grep(\"17-\", df_merge$AMLID),]   ### keep only AML 17\n",
+    "    \n",
+    "df_merge$CR_MRD_neg <- ifelse(df_merge$MRD1==\"CR,MRD-\",1,0)\n",
+    "    \n",
+    "df_merge$CR_MRD_pos <- ifelse(df_merge$MRD1==\"CR,MRD+\",1,0)\n",
+    "    \n",
+    "df_merge$all_others <- ifelse(df_merge$MRD1!=\"CR,MRD+\" & df_merge$MRD1!=\"CR,MRD-\",1,0)\n",
+    "    \n",
+    "df_merge <- df_merge[!is.na(df_merge$OS_CR),]\n",
+    "\n",
+    "df_merge <- df_merge[!is.na(df_merge$MRD1),]\n",
+    "\n",
+    "df_merge <- df_merge[df_merge$os >0 & df_merge$OS_CR >0 & df_merge$RFSyears>0,]\n",
+    "\n",
+    "table(df_merge$MRD2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
