--- a/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,227 @@
        "\n",
        "     NEW_adverse    NEW_favorable NEW_intermediate \n",
        "             356              372              448 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "632 544 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "200 976 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "   0    1 \n",
+       "1111   65 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "742 434 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "981 195 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_nejm <- read.table(\"../Validation/full_data_validation_NO_ITD.tsv\")\n",
+    "\n",
+    "# Rename columns like in Cardiff\n",
+    "\n",
+    "df_nejm <- df_nejm %>% rename(OS_stat = OS_Status, gender = Gender , age = Age, hb = HB, bm_blasts = BM_Blasts, plt = PLT, wbc = WBC)\n",
+    "# Add CR Relapse and their status from AMLSG_Clinical:\n",
+    "\n",
+    "load.Rdata(\"../Validation/AMLSG_Clinical_Anon.RData\",\"val_data\")\n",
+    "rownames(val_data) <- val_data$PDID\n",
+    "\n",
+    "df_nejm <- merge(df_nejm,val_data[,c(\"PDID\",\"CR_date\",\"rfs\",\"rfsstat\")],by = 0)\n",
+    "df_nejm <- df_nejm %>% rename(CR = CR_date, Relapse = rfs , Relapse_stat = rfsstat)\n",
+    "\n",
+    "df_nejm$CR <- as.numeric(df_nejm$CR) / 365\n",
+    "df_nejm$Relapse <- df_nejm$Relapse / 365\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Handle  CR stat and Relapse stat\n",
+    "\n",
+    "# For CR stat , we say that when CR is Na the status is 0 or not Na but CR greater than OS\n",
+    "\n",
+    "df_nejm$CR_stat <- ifelse(is.na(df_nejm$CR) | (!is.na(df_nejm$CR) & df_nejm$CR>df_nejm$OS),0,1)\n",
+    "\n",
+    "## for relapse we keep relapse stat when available and relapse lower than OS (because rfs is either relapse or OS so if they are equals it means that it's OS so we put 0)\n",
+    "## and we put 0 when patients did not experienced CR (because you need CR before Relapse)\n",
+    "#we just made sure that CR+Relapse is lower than OS\n",
+    "\n",
+    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) & df_nejm$CR+df_nejm$Relapse>=df_nejm$OS) ,\"Relapse_stat\"] <- 0\n",
+    " \n",
+    "# # Handle CR\n",
+    "df_nejm[df_nejm$CR_stat==0,\"CR\"] <- df_nejm[df_nejm$CR_stat==0,\"OS\"] \n",
+    "\n",
+    "# # Handle Relapse\n",
+    "\n",
+    "df_nejm[df_nejm$Relapse_stat==0,\"Relapse\"] <- df_nejm[df_nejm$Relapse_stat==0,\"OS\"]\n",
+    "df_nejm[df_nejm$Relapse_stat==1,\"Relapse\"] <- df_nejm[df_nejm$Relapse_stat==1,\"CR\"] + df_nejm[df_nejm$Relapse_stat==1,\"Relapse\"]\n",
+    "\n",
+    "\n",
+    "df_nejm$Death_in_CR <- df_nejm$OS\n",
+    "df_nejm$Death_in_CR_stat <- ifelse(df_nejm$CR_stat==1 & df_nejm$Relapse_stat==0 & df_nejm$OS_stat==1,1,0 )\n",
+    "\n",
+    "df_nejm$Death_in_Relapse <- df_nejm$OS\n",
+    "df_nejm$Death_in_Relapse_stat <- ifelse(df_nejm$CR_stat==1 & df_nejm$Relapse_stat==1 & df_nejm$OS_stat==1,1,0 )\n",
+    "\n",
+    "df_nejm$Death_without <- df_nejm$OS\n",
+    "df_nejm$Death_without_stat <- ifelse(df_nejm$CR_stat==0 & df_nejm$Relapse_stat==0 & df_nejm$OS_stat==1,1,0 )\n",
+    "\n",
+    "\n",
+    "# Add New Proposal\n",
+    "\n",
+    "df_nejm$molecular_classification <- \"none\"\n",
+    "\n",
+    "df_nejm[(df_nejm$full_component_NPM1==1 |df_nejm$full_component_inv_16==1 | df_nejm$full_component_t_8_21==1 | df_nejm$full_component_t_15_17==1 ) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "\n",
+    "df_nejm[(df_nejm$full_component_chr_splicing_1==1 | df_nejm$full_component_t_6_9==1) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
+    "          \n",
+    "df_nejm[((df_nejm$full_component_additions==1 & df_nejm$overlap==1) | df_nejm$full_component_chr_splicing_multiple==1 | \n",
+    "          df_nejm$full_component_TP53_complex==1   | df_nejm$full_component_inv_3==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_adverse\"  \n",
+    "          \n",
+    "df_nejm[((df_nejm$full_component_additions==1 & df_nejm$overlap==0) | df_nejm$full_component_t_11==1 | df_nejm$full_component_WT1==1 | df_nejm$full_component_DNMT3A_IDH1_2==1 |\n",
+    "          df_nejm$full_component_not_assigned==1) & df_nejm$molecular_classification==\"none\",\"molecular_classification\"] <- \"NEW_intermediate\"\n",
+    "          \n",
+    "df_nejm[(df_nejm$full_component_CEBPA_bi==1 | df_nejm$full_component_no_events==1) & df_nejm$molecular_classification==\"none\" ,\"molecular_classification\"] <- \"NEW_favorable\"\n",
+    "\n",
+    "#order is important! adverse . then intermediate otherwise we . overlap\n",
+    "df_nejm[df_nejm$molecular_classification==\"NEW_intermediate\" & df_nejm$ITD==1,\"molecular_classification\"] <- \"NEW_adverse\"\n",
+    "\n",
+    "df_nejm[df_nejm$molecular_classification==\"NEW_favorable\" & df_nejm$ITD==1,\"molecular_classification\"] <- \"NEW_intermediate\"\n",
+    "\n",
+    "df_nejm$NEW_favorable <-  ifelse(df_nejm$molecular_classification==\"NEW_favorable\",1,0)\n",
+    "df_nejm$NEW_intermediate <-  ifelse(df_nejm$molecular_classification==\"NEW_intermediate\",1,0)\n",
+    "df_nejm$NEW_adverse <-  ifelse(df_nejm$molecular_classification==\"NEW_adverse\",1,0)\n",
+    "table(df_nejm$molecular_classification)\n",
+    "\n",
+    "rownames(df_nejm) <- df_nejm$Row.names\n",
+    "df_nejm$Row.names <- NULL\n",
+    "\n",
+    "table(df_nejm$Relapse_stat)\n",
+    "table(df_nejm$CR_stat)\n",
+    "table(df_nejm$Death_in_CR_stat)\n",
+    "table(df_nejm$Death_in_Relapse_stat)\n",
+    "table(df_nejm$Death_without_stat)\n",
+    "write.table(df_nejm,\"df_nejm_personnalization.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OLD NEJM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "     NEW_adverse    NEW_favorable NEW_intermediate \n",
+       "             356              372              448 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "567 609 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "200 976 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "   0 \n",
+       "1176 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "677 499 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "981 195 "
       ]
      },
      "metadata": {},
@@ -107,7 +328,12 @@
     "table(df_nejm$molecular_classification)\n",
     "\n",
     "rownames(df_nejm) <- df_nejm$Row.names\n",
-    "df_nejm$Row.names <- NULL\n"
+    "df_nejm$Row.names <- NULL\n",
+    "table(df_nejm$Relapse_stat)\n",
+    "table(df_nejm$CR_stat)\n",
+    "table(df_nejm$Death_in_CR_stat)\n",
+    "table(df_nejm$Death_in_Relapse_stat)\n",
+    "table(df_nejm$Death_without_stat)"
    ]
   },
   {
@@ -128,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +363,35 @@
        "\n",
        "     NEW_adverse    NEW_favorable NEW_intermediate \n",
        "             752              689              684 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "1274"
+      ],
+      "text/latex": [
+       "1274"
+      ],
+      "text/markdown": [
+       "1274"
+      ],
+      "text/plain": [
+       "[1] 1274"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "   0    1 \n",
+       "1274  755 "
       ]
      },
      "metadata": {},
@@ -238,6 +493,7 @@
     "              \n",
     "df_cardiff$Row.names <- NULL\n",
     "              \n",
+    "\n",
     "              \n",
     "              "
    ]
